tests/sources/invalid/types/type_mismatches.fire
// Invalid tests: type mismatches
// EXPECT: compiler errors about type mismatch

print("-- invalid: assign string to int32 --");  //~ ERROR FS-PARSE-0012 @1
int32 a = "hello"; // error  //~ ERROR FS-SEM-0002 @7

print("-- invalid: incompatible addition --");  //~ ERROR FS-PARSE-0012 @1
string s = "hi";
int32 i = 5;
int32 bad = s + i; // error (string + int32 not supported)  //~ ERROR FS-SEM-0010 @15

print("-- invalid: array element wrong type --");  //~ ERROR FS-PARSE-0012 @1
int32[] nums = [1, 2, "three"]; // error mixed types

print("-- invalid: initializer null to non-nullable --");  //~ ERROR FS-PARSE-0012 @1
int32 notNull = null; // error  //~ ERROR FS-SEM-0010 @7

print("-- invalid: function call undefined --");  //~ ERROR FS-PARSE-0012 @1
foo(1,2,3); // undefined function  //~ ERROR FS-PARSE-0012 @1

print("-- invalid: array method wrong arg type --");  //~ ERROR FS-PARSE-0012 @1
int32[] arr = [1,2];
arr.append("x"); // error wrong type  //~ ERROR FS-SEM-0010 @5
arr.insert(0, "y"); // error wrong type  //~ ERROR FS-SEM-0010 @5
arr.insert("z", 3); // error index must be int32  //~ ERROR FS-SEM-0010 @5

print("-- invalid: pop with wrong arg count/type --");  //~ ERROR FS-PARSE-0012 @1
arr.pop(1,2); // too many args  //~ ERROR FS-SEM-0010 @5
arr.pop("x"); // wrong type  //~ ERROR FS-SEM-0010 @5

print("-- invalid: index non-array --");  //~ ERROR FS-PARSE-0012 @1
int32 b = 5;
int32 c = b[0]; // cannot index non-array  //~ ERROR FS-SEM-0010 @11

print("-- invalid: index not int --");  //~ ERROR FS-PARSE-0012 @1
int32[] z = [1];
int32 d = z["zero"]; // index must be int32  //~ ERROR FS-SEM-0010 @13

print("-- invalid: condition not boolean --");  //~ ERROR FS-PARSE-0012 @1
if (5) { // condition must be bool  //~ ERROR FS-SEM-0010 @5
    print(5);  //~ ERROR FS-PARSE-0012 @5
}

print("-- invalid: variable shadowing --");  //~ ERROR FS-PARSE-0012 @1
int32 outer = 1;
{
    int32 outer = 2; // shadowing not allowed  //~ ERROR FS-SEM-0010 @11
}

print("-- invalid: use before declaration --");  //~ ERROR FS-PARSE-0012 @1
print(beforeDecl); // variable not defined  //~ ERROR FS-PARSE-0012 @1
int beforeDecl = 10;  //~ ERROR FS-PARSE-0010 @1

print("-- invalid: mixed array literal nested --");  //~ ERROR FS-PARSE-0012 @1
int32[] nested = [[1],[2]]; // array of arrays not allowed currently  //~ ERROR FS-SEM-0010 @18

print("-- invalid: assignment type mismatch --");  //~ ERROR FS-PARSE-0012 @1
int32 m = 1;
m = "oops"; // mismatch  //~ ERROR FS-SEM-0002 @1

print("-- invalid tests end --");  //~ ERROR FS-PARSE-0012 @1
